# ox2

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  app.cpp  app.h  auidemo.cpp  mainframe.cpp  mainframe.h  math.h  mycanvas.cpp  mycanvas.h  node.cpp  node.h  scene.cpp  scene.h
include/ox2/editor/: app.h  frame.h  sizerptpanel.h
po/: CMakeLists.txt  Makevars  cs.po
res/: logo.xcf  logo64.xpm  splash.xcf
src/: CMakeLists.txt  app.cpp  app.h  config.h.cmake  core.cpp  core.h  dialogs.cpp  dialogs.h  editor.rc  editor_app.cpp  frame.cpp  genfile  logo.xpm  mainframe.cpp  mainframe.h  node.cpp  node.h  panels.cpp  panels.h  prefs.cpp  prefs.h  resources.cpp  resources.h  scene.cpp  scene.h  sizerptpanel.cpp
test/: menu.xml  scene.xml  scene1.xml  scene2.xml
